# stock_trading_cli

./: Cargo.toml
src/: main.rs
